--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,8 @@ body {
 
     position: relative;
     top: 1.8rem;
+
+    transition: all .1s ease-in-out;
 }
 .advice-container__button:hover {
     box-shadow: 0 0 5px var(--primary-neon-green), 0 0 5px var(--primary-neon-green), 0 0 10px var(--primary-neon-green), 0 0 15px var(--primary-neon-green), 0 0 20px var(--primary-neon-green), 0 0 25px var(--primary-neon-green), 0 0 30px var(--primary-neon-green);
